test: 문제 테스트 disabled